# simple_obfuscation

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt  run_mask_face_test.py  run_mask_face_test_fsdp.py  run_mind_face_test.py  run_mind_face_test_fsdp.py  setup.sh
data/: daft_math_filtered.jsonl  hard_math_prompt_rendered.txt  hardmath_correct.jsonl  judge_sft.jsonl  judge_sft_with_prepended_hints.jsonl
rollouts/: README.md  inspect_rollouts.py  rollout_00000000.json  rollout_00000001.json  rollout_00000002.json
scripts/: build_arxiv_ml_dataset.py  build_filtered_daft_math.py  build_judge_sft_dataset.py  inspect_masks.py  run_many.sh  test_distributed_training.py  torchrun_nccl_probe.py  train.py  train_hardmath_filter_correct.py
simple_rl_research/: __init__.py
simple_rl_research.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
simple_rl_research/config/: __init__.py  minimal_prompts.jsonl  minimal_training.yaml
simple_rl_research/generation/: __init__.py  logit_processors.py  prompt_builder.py
simple_rl_research/reward/: __init__.py  base.py  judge_penalty.py  regex_penalty.py  task_reward.py
src/: __init__.py
tests/: dummy_lm.py  test_ddp_fsdp.py  test_distributed_training.py  test_distributed_training_multi.py  test_expanded_polynomial_reward.py  test_factored_polynomial_reward.py  test_generation_pipeline.py  test_logit_processor.py  test_mask.py  test_mind_face.py  test_mindface.py  test_qwen_logit_processor.py  test_registry.py  test_trainer_internals.py  test_utils.py  test_zero_special_token_grads.py
(+64 files in other folders)
